openmediavault (7.4.11-1) stable; urgency=low

  * Several improvements.
  * Issue #1835: Unlink mount directory only if empty.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 12 Oct 2024 12:13:43 +0200

openmediavault (7.4.10-1) stable; urgency=low

  * Issue #1830: Add alternative MAC address support for bridge
    network interfaces.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 07 Oct 2024 20:21:44 +0200

openmediavault (7.4.9-2) stable; urgency=low

  * Update locale files.
  * Several improvements.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 29 Sep 2024 10:51:09 +0200

openmediavault (7.4.8-1) stable; urgency=low

  * Update locale files.
  * Unify the sorting order of displayed data in the `Disk Temperatures`
    and `S.M.A.R.T. Status` dashboard widgets for a consistent user
    experience.
  * Issue #1825: Support Xen predictive network interface naming.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 03 Sep 2024 22:43:45 +0200

openmediavault (7.4.7-1) stable; urgency=low

  * Support host names according to RFC1123.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 29 Aug 2024 15:45:46 +0200

openmediavault (7.4.6-1) stable; urgency=low

  * Update locale files.
  * Add UDEV rule to fix the duplicate serial number issue for
    Congdi 2.5-Inch USB 3.1 Type-C hard drive enclosures.
  * Add UDEV rule to fix the duplicate serial number issue for
    Insignia 2-Bay HDD docking stations.
  * Use `subtree_check` to reduce subtree attacks in the NFSv4
    pseudo file system export. This can be modified via the
    `OMV_NFSD_V4_PSEUDO_ROOT_OPTIONS` environment variable.
  * Remove support to create Ext3 file systems from the UI.
  * Use of the internal quotas of Ext4 for new file systems to
    be created.
  * Improve file system quota Salt state.
  * Issue #1813: Return the configured mount point for each file
    system in the `FileSystemMgmt::enumerateMountedFilesystems`